# personal

./: README.md
esp32s3/: CMakeLists.txt  Kconfig  README.md  prj.conf
esp32s3/boards/: esp32s3_devkitm.overlay
esp32s3/dts/bindings/: Kconfig
esp32s3/dts/bindings/ra8875/: worldsemi,ra8875.yaml
esp32s3/include/: adc.h  bluetooth_adv.h  led_strip.h
esp32s3/src/: adc.c  bluetooth_adv.c  led_strip.c  main.c
esp32s3/src/ra8875/: RA8875.c  RA8875.h  low_level.c
esp32s3/src/ra8875/_settings/: RA8875Calibration.h  RA8875ColorPresets.h  RA8875Registers.h  RA8875UserSettings.h  RA8875_CPU_commons.h  font.h
esp32s3wifi/: CMakeLists.txt  README.md  prj.conf
esp32s3wifi/boards/: esp32s3_devkitm.conf  esp32s3_devkitm.overlay
esp32s3wifi/src/: led_strip.c  main.c
vscode_settings/: settings.json
